--- a/articles/static/css/index.css
+++ b/articles/static/css/index.css
@@ -2,3 +2,69 @@ body {
   color: #FCA205;
   background-color: #000000;
 }
+
+.obsh {
+  margin-left: 200px;
+  border: 2px;
+  padding-left: 30px;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  margin-right: 540px;
+  box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+  border-radius: 4px;
+  background-color: #44534543;
+}
+
+h1 {
+  margin-left: 160px;
+}
+
+header {
+    background-color: #34354544;
+    color: #FCA205;
+    margin-top: -25px;
+    margin-bottom: 10px;
+    margin-left: -10px;
+    margin-right: -7px;
+    padding-left: 50px;
+    padding-top: 14px;
+    padding-bottom: 20px;
+    display: block;
+
+    box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+  }
+
+.cor {
+  margin-top: -50px;
+  margin-left: 500px;
+}
+
+.roc {
+  margin-top: -35px;
+  margin-left: 650px;
+}
+
+.xxx {
+  margin-top: -50px;
+  margin-left: 300px;
+}
+
+.fff {
+  margin-top: -68px;
+  margin-left: 650px;
+}
+
+.rightnews {
+
+  background-color: #44534543;
+  width: 90px;
+  height: 200px;
+  position: fixed;
+  top: 90;
+  padding-bottom: 10px;
+  margin-left: 750px;
+  padding-right: 230px;
+  border: 1px;
+  border-radius: 4px;
+
+}
