--- a/articles/templates/signup.html
+++ b/articles/templates/signup.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Sign up</h2>
+<h2>Регистрация</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
