Расширено приложение, добавлена возможность открытия статей в новых вкладках для удобного чтения. Изменены временно внешний вид и цветовая тема сайта

--- a/articles/templates/signup.html
+++ b/articles/templates/signup.html
@@ -1,11 +1,57 @@
-<!-- templates/signup.html -->
-{% extends 'base.html' %}
+{% load static %}
+
+<meta charset="utf-8">
+<head>
+
+   	 <title>Site with dark theme</title>
+   	 <meta charset="utf-8">
+   	 <link rel="stylesheet" type="text/css"  href="{% static "css/styles/main.css" %}">
+   	 <link rel="stylesheet" type="text/css"  href="{% static "css/styles/light.css" %}" id="theme-link">
+     
+</head>
 
 {% block content %}
+
+<?php
+session_start();
+
+if(!isset($_SESSION["theme"]))
+{
+    $_SESSION["theme"] = "light";
+}
+?>
+
+   	 <div class="wrapper">
+   		 <div class="theme-button" id="theme-button">Change theme</div>
+   		 <header class="header">
+   			 <div class="header__content">
+   				 <h1>Site with dark theme</h1>
+   				 <nav class="nav">
+   					 <div class="nav__content">
+   						 <a href="#" class="nav__item nav__item_active">Home</a>
+   						 <a href="#" class="nav__item">Blog</a>
+   						 <a href="#" class="nav__item">About</a>
+   						 <a href="#" class="nav__item">Contacts</a>
+   					 </div>
+   				 </nav>
+   			 </div>
+   		 </header>
+   		 <main class="main">
+   			 <article class="main__content">
+   				 //Тут будет Lorem Ipsum
+   			 </article>
+   		 </main>
+   	 </div>
+   	 <script type="text/javascript" src={% static "js/themes.js" %}></script>
+
+
 <h2>Регистрация</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Sign up</button>
 </form>
-{% endblock content %}
+
+
+
+{% endblock %}
