--- a/articles/static/css/index.css
+++ b/articles/static/css/index.css
@@ -1,18 +1,35 @@
 body {
-  color: #FCA205;
-  background-color: #000000;
+  color: #034004;
+  background-color: #ffffff;
+
 }
+
+
 
 .obsh {
   margin-left: 200px;
   border: 2px;
   padding-left: 30px;
   padding-top: 20px;
+  margin-top: 20px;
   padding-bottom: 40px;
+  padding-right: 40px;
   margin-right: 540px;
   box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
   border-radius: 4px;
-  background-color: #44534543;
+  background-color: #004600;
+}
+
+.mema {
+  background-color: #ffffff;
+}
+
+.teta {
+  background-color: #ffffff;
+}
+
+.tet {
+  background-color: #ffffff;
 }
 
 h1 {
@@ -20,7 +37,7 @@ h1 {
 }
 
 header {
-    background-color: #34354544;
+    background-color: #004600;
     color: #FCA205;
     margin-top: -25px;
     margin-bottom: 10px;
@@ -55,16 +72,32 @@ header {
 }
 
 .rightnews {
-
-  background-color: #44534543;
+  background-color: #004600;
   width: 90px;
   height: 200px;
   position: fixed;
-  top: 90;
+  top: 100px;
   padding-bottom: 10px;
   margin-left: 750px;
   padding-right: 230px;
   border: 1px;
   border-radius: 4px;
 
+}
+
+.ererat {
+  background-color: #004600;
+  width: 90px;
+  height: 200px;
+  position: fixed;
+  top: 120px;
+  padding-bottom: 10px;
+  margin-left: 750px;
+  padding-right: 230px;
+  border: 1px;
+  border-radius: 4px;
+}
+
+.table {
+  background-color: #000000;
 }
