--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -6,28 +6,7 @@
 
 <header>
   <h1>jagiellonsky</h1>
-    {% if user.is_authenticated %}
-    <div class="cor">
-      <p>Hi {{ user.username }}!</p>
-    </div>
 
-    <div class="roc">
-      <p><a href="{% url 'logout' %}">Выйти</a></p>
-    </div>
-
-    {% else %}
-
-    <div class="xxx">
-      <p>Вы не зарегестрированны</p>
-      <a href="{% url 'signup' %}">Зарегестрироваться</a>
-    </div>
-
-    <div class="fff">
-      <p>Если у вас есть аккаунт</p>
-      <a href="{% url 'login' %}">Войти</a>
-    </div>
-
-    {% endif %}
 
 </header>
 
@@ -36,6 +15,7 @@
     {% if latest_comments_list %}
 
         {% for c in latest_comments_list %}
+        <a href="{% url 'articles:authorpost' pk=c.pk %}">
             <p>
                 <div class="mema">
                     <strong>{{c.author_name}}</strong>
@@ -43,7 +23,8 @@
                 <div class="teta">
                     <p>{{c.comment_text}}</p>
                 </div>
-                <div class="teta">
+        </a>
+                <div class="tet">
 
                     {% if user.is_authenticated %}
                         <h7>{{ user.username }}</h7>
@@ -51,9 +32,12 @@
                         <h7>Анонимный пользователь</h7>
                     {% endif %}
 
+                   
+
                 </div>
+            		    
             </p>
-        {% endfor %}
+                  {% endfor %}
 
     {% else %}
       <div class="trumpmygob">
@@ -61,36 +45,38 @@
       </div>
 
     {% endif %}
+
+    <div class="rewit">
+       {% if user.is_authenticated %}
+        <div class="rightnews">
+           <a href="{% url 'articles:account' %}">
+           <div class="cr">
+              <p>Hi {{ user.username }}!</p>
+            </div>
+            </a>
+            <div class="rc">
+                <p><a href="{% url 'logout' %}">Выйти</a></p>
+            </div>
+        </div>
+       {% else %}
+       <div class="ererat">
+          <div class="xx">
+             <p>Вы не зарегестрированны</p>
+              <a href="{% url 'signup' %}">Зарегестрироваться</a>
+             </div>
+             <div class="ff">
+               <p>Если у вас есть аккаунт</p>
+               <a href="{% url 'login' %}">Войти</a>
+             </div>
+          </div>
+          {% endif %}
+    </div>
+
     <h1><a href="{% url 'articles:opis' %}">
       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
       </svg>
     </a></h1>
-
-
-    <div class="rightnews">
-      {% if user.is_authenticated %}
-      <div class="cr">
-        <p>Hi {{ user.username }}!</p>
-      </div>
-
-      <div class="rc">
-        <p><a href="{% url 'logout' %}">Выйти</a></p>
-      </div>
-
-      {% else %}
-
-      <div class="xx">
-        <p>Вы не зарегестрированны</p>
-        <a href="{% url 'signup' %}">Зарегестрироваться</a>
-      </div>
-
-      <div class="ff">
-        <p>Если у вас есть аккаунт</p>
-        <a href="{% url 'login' %}">Войти</a>
-      </div>
-    </div>
-    {% endif %}
 
 
 </div>
