--- a/articles/templates/registration/login.html
+++ b/articles/templates/registration/login.html
@@ -1,9 +1,10 @@
 <!-- templates/registration/login.html -->
 {% extends 'base.html' %} &nbsp;{% block content %}
-<h2>Войти</h2>
+
+<h2>Log In</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Войти</button>
+  <button type="submit">Log In</button>
 </form>
 {% endblock content %}
