--- a/articles/templates/signup.html
+++ b/articles/templates/signup.html
@@ -1,4 +1,6 @@
+
 {% load static %}
+
 
 <meta charset="utf-8">
 <head>
@@ -12,14 +14,7 @@
 
 {% block content %}
 
-<?php
-session_start();
 
-if(!isset($_SESSION["theme"]))
-{
-    $_SESSION["theme"] = "light";
-}
-?>
 
    	 <div class="wrapper">
    		 <div class="theme-button" id="theme-button">Change theme</div>
@@ -42,7 +37,7 @@ if(!isset($_SESSION["theme"]))
    			 </article>
    		 </main>
    	 </div>
-   	 <script type="text/javascript" src={% static "js/themes.js" %}></script>
+   	 <script type="text/javascript" src={% static "js/dark.js" %}></script>
 
 
 <h2>Регистрация</h2>
