--- a/articles/static/css/styles/dark.css
+++ b/articles/static/css/styles/dark.css
@@ -1,33 +1,36 @@
-body
-{
-    background: #111;
-    color: #f4f4f4;
+body{
+    background-color: rgb(36, 41, 46) !important;
 }
 
-.header
-{
-    background: #373737;
-    color: #f4f4f4;
+h1, h2, h3, h4, h5, h6{
+    color: #fff;
 }
 
-.nav__item
-{
-    color: #f4f4f4;
-    background: #373737;
+p, span, small{
+    color: #eaeaea;
 }
 
-.nav__item:hover, .nav__item_active
-{
-    background: #444;
+#box{
+    width: 400px;
+    margin: 0 auto;
+    margin-top: 100px;
+    border: 2px solid rgb(24, 26, 31);
+    border-radius: 5px;
+    text-align: center;
+    padding: 20px;
+    background-color: rgb(49, 54, 63) !important;
 }
 
-.theme-button
-{
-    color: #f4f4f4;
-    background: #4f7faf;
+#profile_pic{
+    display: block;
+    border-radius: 50%;
+    margin: 10px auto;
+    width: 200px;
+    border: 2px solid rgb(24, 26, 31);
+
 }
 
-.theme-button:hover
-{
-    background: #6f9fcf;
+hr{
+    margin: 20px;
+    background-color: #eaeaea;
 }
