Некоторые баги пофикшены. Добавлена возможность редактировать свой пост

--- a/articles/templates/articles/authorpost.html
+++ b/articles/templates/articles/authorpost.html
@@ -1,6 +1,9 @@
 {% load static %}
 <title>Jagielly</title>
 <link rel="stylesheet" href="{% static "css/index.css" %}"/>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 {% block content %}
     <p>
@@ -22,4 +25,6 @@
                    
 
                 </div>
+    <a class="btn btn-default" href="{% url 'articles:post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+
 {% endblock %}
