Изменён внешний вид главной страницы.

--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -6,8 +6,7 @@
 
 
 <header>
-  <h1>jagiellonsky</h1>
-
+  <a href="{% url 'articles:index' %}">Jagiellonsky</a>
 
 </header>
 
@@ -16,6 +15,7 @@
     {% if latest_comments_list %}
 
         {% for c in latest_comments_list %}
+        <div class="our_comments">
         <a href="{% url 'articles:authorpost' pk=c.pk %}">
             <p>
                 <div class="mema">
@@ -36,10 +36,11 @@
                    
 
                 </div>
-                <a href="{% url 'articles:post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+           </p>
+         </div>
+               
 
-            		</a>    
-            </p>
+            		
                   {% endfor %}
 
     {% else %}
@@ -75,15 +76,20 @@
           {% endif %}
     </div>
 
-    <h1><a href="{% url 'articles:post_new' %}">
-      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-      </svg>
-    </a></h1>
+    
 
 
 </div>
 
+<div class="our_plus">
 
+ 
+  <h1><a href="{% url 'articles:post_new' %}">
+  <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+  </svg></a></h1>
+
+  <h5>Создать новый пост</h5>
+</div>
 
 {% endblock %}
