--- a/articles/static/css/index.css
+++ b/articles/static/css/index.css
@@ -1,6 +1,6 @@
 body {
-  color: #034004;
-  background-color: #ffffff;
+  color: #19191A;
+  background-color: #EDEEF0;
 
 }
 
@@ -17,39 +17,66 @@ body {
   margin-right: 540px;
   box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
   border-radius: 4px;
-  background-color: #004600;
-}
-
-.mema {
   background-color: #ffffff;
 }
 
-.teta {
+.our_plus {
   background-color: #ffffff;
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  top: 300px;
+  padding-bottom: 10px;
+  margin-left: 1000px;
+  padding-top: 70px;
+  padding-right: 70px;
+  padding-left: 20px;
+  border: 10px;
+  border-radius: 4px;
+  display: block;
+  box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
 }
 
-.tet {
-  background-color: #ffffff;
+.our_plus h1{
+  margin-top: -50px;
+  margin-left: 30px;
+  padding-right: 1000px;
 }
+
+.our_plus h5{
+  margin-top: -10px;
+  margin-left: 21px;
+  padding-right: 1000px;
+}
+
 
 h1 {
   margin-left: 160px;
 }
 
 header {
-    background-color: #004600;
-    color: #FCA205;
+    background-color: #ffffff;
+    color: #19191A;
     margin-top: -25px;
-    margin-bottom: 10px;
+    margin-bottom: 1px;
     margin-left: -10px;
     margin-right: -7px;
     padding-left: 50px;
-    padding-top: 14px;
-    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 10px;
     display: block;
-
     box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
   }
+
+header a{
+  text-decoration: none;
+  font-weight:bold;
+
+  color: #19191A;
+  margin-left: 155px;
+  font-size: 250%;
+
+}
 
 .cor {
   margin-top: -50px;
@@ -72,32 +99,51 @@ header {
 }
 
 .rightnews {
-  background-color: #004600;
+  background-color: #ffffff;
   width: 90px;
   height: 200px;
   position: fixed;
-  top: 100px;
+  top: 82px;
   padding-bottom: 10px;
-  margin-left: 750px;
-  padding-right: 230px;
+  margin-left: 770px;
+  padding-right: 200px;
+  padding-left: 20px;
   border: 1px;
   border-radius: 4px;
+  box-shadow: 0 0 13px 3px rgba(0,0,0,.5)
 
 }
 
 .ererat {
-  background-color: #004600;
-  width: 90px;
+  background-color: #ffffff;
+  width: 82px;
   height: 200px;
   position: fixed;
-  top: 120px;
+  top: 82px;
   padding-bottom: 10px;
-  margin-left: 750px;
+  margin-left: 770px;
   padding-right: 230px;
+  padding-left: 20px;
   border: 1px;
   border-radius: 4px;
+  box-shadow: 0 0 13px 3px rgba(0,0,0,.5)
+}
+
+.rightnews .cr{
+  color: #19191A;
+  text-decoration: none;
+  font-weight:bold;
+  
 }
 
 .table {
   background-color: #000000;
+}
+
+.our_comments{
+  border-radius: 2px;
+  
+  background-color: #EDEEF0;
+  border: 0.5px;
+  box-shadow: 0 0 13px 3px rgba(0,0,0,.5)
 }
