--- a/articles/templates/signup.html
+++ b/articles/templates/signup.html
@@ -59,7 +59,7 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Sign up</button>
+  <button type="submit">Зарегестрироваться</button>
 </form>
 
 
