--- a/articles/static/css/styles/dark.css
+++ b/articles/static/css/styles/dark.css
@@ -1,36 +1,64 @@
-body{
-    background-color: rgb(36, 41, 46) !important;
+body {
+  color: #fff;
+  background-color: rgb(36, 41, 46) !important;
+  margin: 7;
+
 }
 
-h1, h2, h3, h4, h5, h6{
+.obsh {
+  margin-left: 200px;
+  border: 2px;
+  padding-left: 30px;
+  padding-top: 20px;
+  margin-top: 20px;
+  padding-bottom: 40px;
+  padding-right: 40px;
+  margin-right: 540px;
+  box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+  border-radius: 4px;
+  background-color: #000000;
+}
+
+header {
+    font-family: Georgia, serif;
+    background-color: #000000;
     color: #fff;
-}
-
-p, span, small{
-    color: #eaeaea;
-}
-
-#box{
-    width: 400px;
-    margin: 0 auto;
-    margin-top: 100px;
-    border: 2px solid rgb(24, 26, 31);
-    border-radius: 5px;
-    text-align: center;
-    padding: 20px;
-    background-color: rgb(49, 54, 63) !important;
-}
-
-#profile_pic{
+    margin-top: -15px;
+    margin-bottom: 1px;
+    margin-left: -10px;
+    margin-right: -7px;
+    padding-left: 50px;
+    padding-top: 20px;
+    padding-bottom: 10px;
     display: block;
-    border-radius: 50%;
-    margin: 10px auto;
-    width: 200px;
-    border: 2px solid rgb(24, 26, 31);
+    box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+  }
+
+header a{
+  text-decoration: none;
+  font-weight:bold;
+
+  color: #fff;
+  margin-left: 155px;
+  font-size: 250%;
 
 }
 
-hr{
-    margin: 20px;
-    background-color: #eaeaea;
+.rightnews {
+  background-color: #000000;
+  width: 0px;
+  height: 140px;
+  position: fixed;
+  top: 103px;
+  padding-bottom: 10px;
+  margin-left: 990px;
+  padding-right: 90px;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 150px;
+  border: 1px;
+  border-radius: 4px;
+  display: block;
+  box-shadow: 0 0 13px 3px rgba(0,0,0,.5)
+
 }
