--- a/articles/static/css/styles/main.css
+++ b/articles/static/css/styles/main.css
@@ -49,3 +49,46 @@ body, html
     padding: 10px 25px;
     cursor: pointer;
 }
+
+header {
+    font-family: Georgia, serif;
+    background-color: #ffffff;
+    color: #19191A;
+    margin-top: -15px;
+    margin-bottom: 1px;
+    margin-left: -10px;
+    margin-right: -7px;
+    padding-left: 50px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    display: block;
+    box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+  }
+
+header a{
+  text-decoration: none;
+  font-weight:bold;
+
+  color: #19191A;
+  margin-left: 155px;
+  font-size: 250%;
+
+}
+
+.rightnews {
+  background-color: #000000;
+  width: 0px;
+  height: 140px;
+  position: fixed;
+  top: 103px;
+  padding-bottom: 10px;
+  margin-left: 990px;
+  padding-right: 90px;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 150px;
+  border: 1px;
+  border-radius: 4px;
+  box-shadow: 0 0 13px 3px rgba(0,0,0,.5)
+
+}
