--- a/articles/templates/signup.html
+++ b/articles/templates/signup.html
@@ -14,11 +14,14 @@
 
 {% block content %}
 
+<header>
+  <a href="{% url 'articles:index' %}">Jagiellonsky</a>
 
-
-   	<button class="btn btn-light" onclick="swapStyle('/static/css/styles/light.css')">Light Mode</button>
-    <button class="btn btn-dark" onclick="swapStyle('/static/css/styles/dark.css')">Dark Mode</button>
-  
+</header>
+<div class="rightnews">
+  <button class="btn btn-light" onclick="swapStyle('/static/css/styles/light.css')">Light Mode</button>
+  <button class="btn btn-dark" onclick="swapStyle('/static/css/styles/dark.css')">Dark Mode</button>
+</div>
 
 <script type="text/javascript">
 
@@ -53,7 +56,7 @@
     */
     
   </script>
-    
+<div class="obsh">    
 <h2>Регистрация</h2>
 
 <form method="post">
@@ -61,7 +64,7 @@
   {{ form.as_p }}
   <button type="submit">Зарегестрироваться</button>
 </form>
-
+</div>
 
 
 {% endblock %}
