--- a/articles/templates/articles/authorpost.html
+++ b/articles/templates/articles/authorpost.html
@@ -6,11 +6,12 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="{% static "css/authorpost.css" %}"/>
 
 {% block content %}
 
 <header>
-  <a href="{% url 'articles:index' %}">Jagiellonsky</a>
+  <a href="{% url 'articles:index' %}"style="color:#000000;">Jagiellonsky</a>
 </header>
 
 <div class="obsh">
