--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -6,7 +6,7 @@
 
 
 <header>
-  <a href="{% url 'articles:index' %}">Jagiellonsky</a>
+  <a href="{% url 'articles:index' %}">Jagiellonskiy</a>
 
 </header>
 
