--- a/articles/templates/articles/opis.html
+++ b/articles/templates/articles/opis.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <header>
-  <a href="{% url 'articles:index' %}">Jagiellonsky</a>
+  <a href="{% url 'articles:index' %}">Jagiellonskiy</a>
 
 </header>
 
