--- a/articles/templates/articles/post_edit.html
+++ b/articles/templates/articles/post_edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <header>
-  <a href="{% url 'articles:index' %}">Jagiellonsky</a>
+  <a href="{% url 'articles:index' %}">Jagiellonskiy</a>
 </header>
 
 
