--- a/articles/templates/registration/login.html
+++ b/articles/templates/registration/login.html
@@ -1,10 +1,16 @@
 <!-- templates/registration/login.html -->
-{% extends 'base.html' %} &nbsp;{% block content %}
+{% extends 'articles/index.html' %} &nbsp;{% block content %}
 
-<h2>Войти</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Войти</button>
-</form>
+<header>
+	<a href="{% url 'articles:index' %}">Jagiellonsky</a>
+</header>
+
+<div class="obsh">
+	<h2>Войти</h2>
+	<form method="post">
+	  {% csrf_token %}
+	  {{ form.as_p }}
+	  <button type="submit">Войти</button>
+	</form>
+</div>
 {% endblock content %}
